# get_weather

./: .gitignore  Cargo.toml  getWeather.ts
src/: main.rs  open_weather.rs
