[package]
name = "get_weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chalk_rs = "1.0.1"
chrono = "0.4.26"
reqwest = {version="0.11.18",features = ["json"]}
serde = "1.0.175"
serde_derive = "1.0.175"
tokio = { version = "1", features = ["full"] }
